# stock-checker-python

./: README.md  database.py  main.py  pyproject.toml  stock_likes.db
public/: client.js  style.css
views/: index.html
