[tool.poetry]
name = "stock-checker-python"
version = "0.1.0"
description = "Python stock price checker"
authors = ["Ty Mick <ty@tymick.me>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
